styles.css
/* main section: SMALL, <480px, for mobile */
* {
    box-sizing: inherit;
}

html {
    box-sizing: border-box;
}


p, h1, h2, h3, h4, h5, h6, li, address, .nav-child {
    font-family: 'Raleway', sans-serif;
    color: #233A5A;
}

body {
    margin: 0;
    background-color: #c4dee4;
}

h1 {
    font-weight: 900;
    font-size: 40px;
}

h2 {
    font-weight: 900;
    font-size: 27px;
}

.time-text {
    color: #233A5A;
    font-size: 40px;
    font-weight: bolder;
}

.bee {
    z-index: 888;
}

a {
    text-decoration: none;
    color: #233A5A;
    font-size: 40px;
    font-weight: 700;
}

p, li, address {
    font-family: 'PT Sans', sans-serif;
}

address {
    font-style: normal;
    font-size: 15px;
    color: #233A5A;
    padding: 0 0 15px 15px;

}

.gradient-text {
    background-color: #1a968e;
    background-image: linear-gradient(95deg, #233A5A, #7998A0);
    background-size: 100%;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
    -moz-background-clip: text;
    -moz-text-fill-color: transparent;
}



.grid-container {
    display: grid;
    margin: 0 auto;
    grid-template-columns: auto;
    grid-gap: 10px;
}

.box {

}



.title {
    margin: 25px 15px 0 15px;
}

.content {
    background: linear-gradient(135deg, #7998A0 8%, #F9CB6D 8%, #F9CB6D 15%, #7998A0 15%, #7998A0 17%, #EA6352 17%, #EA6352 19%, #7998A0 19%);
    background-repeat: no-repeat; 

    /*background-color: #7998A0; */
    border-radius: 10px;
    padding: 15px 15px 15px 15px;
    margin: 0 15px 0 15px;
    position: relative;
}

.heading {
    padding-top: 80px;
    /* todo - change so that it's 0px if nav bar isn't active */
}


.nav-bar {
    position: fixed;
    z-index: 999;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
    width: 100%;
    background: #fff;
    padding: 10px;
}

.nav-child {
    padding: 0 50px 0 50px;
    font-weight: 600;
}

.nav-icon {
    width: 50px;
}

.flower {
    width: 100px;
    height: auto;
}

.bee-img {
    width: 100px;
    height: auto;
}

.beehive-img {
    width: 80px;
    height: auto;
}

.lefty-text {
    float: left;
    width: 80%;
}

.righty-image {
    width: auto;
    position: absolute; 
    bottom: 15px; 
    right: 15px;
}

.righty-text {
    width: auto;
    position: fixed; 
    bottom: 15px; 
    right: 15px;
}

.lefty-image {
    float: left;
    width: 100px;
    margin: 33px 8px 0px 16px;
    
}


/* MEDIUM, 480-768px, for tablets */
@media screen and (min-width: 480px) and (max-width: 768px) {
    
      
}


/* WIDE, > 769px, for desktop */
@media screen and (min-width: 769px) {
      
    .grid-container {
        display: grid;
        margin: 0 auto;
        grid-template-columns: 150px auto;
        grid-gap: 10px;
    }
    
    .box {
    
    }
    
}

/* if NOT a touchscreen (has a keyboard) */
@media (hover: hover) {
    .game-bar {
        visibility: hidden;
    }
    .game-arrow {
        visibility: hidden;
    }
  }

/* if it's a touchscreen */
@media (hover: none) {
    .game-bar {
        position: fixed;
        z-index: 900;
        width: 100%;
        height: 40vmin;
        bottom: 0;
        background-color: #ffffffc8;
    }
    .game-arrow {
        width: 60px;
        height: auto;
        z-index: 999;
        position: fixed;
    }

    .arrow-right {
        bottom: 10vmin;
        right: 1vmin;
        transform: rotate(180deg);
    }
    
    .arrow-left {
        bottom: 10vmin;
        left: 1vmin;
    }
    
    .arrow-up {
        bottom: 20vmin;
        right: 45vmin;
        transform: rotate(90deg);
    }
    
    .arrow-down {
        bottom: 0;
        right: 45vmin;
        transform: rotate(270deg);
    }
  }

